--- a/index.html
+++ b/index.html
@@ -1,102 +1,75 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<title>SCVWD GIS WEB APP Prototype</title>
-
-		<!--stylesheets -->
-		<link rel="stylesheet" href="assets/css/custom.css" type="text/css">
-    	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    	<link rel="stylesheet" href="assets/css/OL/theme/default/style.css" type="text/css">
-    	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Nova Square&text=SCVWDGIebApProty">
+		<title>SCVWD Flood Forecast System</title>
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-    	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+		<link rel="stylesheet" href="assets/css/portal.css">
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Nova Square|Oswald">
+		<!--[if IE 6]>
+			<style type="text/css">
+			/* some css fixes for IE browsers */
+				html {overflow-y:hidden;}
+				body {overflow-y:auto;}
+				#bg {position:absolute; z-index:-1;}
+				#content {position:static;}
+			</style>
+		<![endif]-->
 	</head>
-	<body onload="init()">
-		<nav id="navBar" class="navbar navbar-default" role="navigation">
+	<body  style='background-image: url("assets/images/siliconvalleyaerial.jpg");background-repeat: no-repeat;'>
+		
+		<div id="bg"><img src="assets/images/siliconvalleyaerial.jpg" width="100%" height="100%" alt=""></div>
+		<div id="content">
+			<nav class="navbar navbar-default" role="navigation" style="min-width:1024px;">
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#">SCVWD GIS Web App Prototype</a>
+				<!-- 	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				        <span class="sr-only">Toggle navigation</span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				      </button> -->
+					<a class="navbar-brand" href="#">SCVWD Flood Forecast System</a>
 				</div>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<div class="navbar-right" role="search">
-						<button type="submit" id="btnCountyView" class="btn btn-default navbar-btn">
-							<span class=""></span> County View
-						</button>
-					</div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">Action</a></li>
+								<li><a href="#">Another action</a></li>
+								<li><a href="#">Something else here</a></li>
+								<li class="divider"></li>
+								<li><a href="#">Separated link</a></li>
+								<li class="divider"></li>
+								<li><a href="#">One more separated link</a></li>
+							</ul>
+						</li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#">Link</a></li>
+					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
-		<!--end navbar-->
-		<div id="map"></div>
-		<div id="tabbedPanel" title="Gage Information">
-			<ul>
-				<li><a href="#tabs-1">Gage Information</a></li>
-				<li><a href="#tabs-2">Plot Data</a></li>
-				<li><a href="#tabs-3">Multi-Plot</a></li>
-			</ul>
-			<div id="tabs-1">
-			</div>
-			<div id="tabs-2">
-				<div id="plot"></div>
-				<div class="container">
-					<div class='row'>
-						<div id="plotSelectParent" class="col-md-2">
-							<label>Plot Select: </label>
-							<select id="plotSelect">
-							</select>
-						</div>
-						<div class="col-md-2">
-							<label class="" for="">From:</label>
-							<input type="" class="form-control" id="plotDPFrom" placeholder="">
-						</div>
-						<div class="col-md-2" style="">
-							<label class="" for="">To:</label>
-							<input type="" class="form-control" id="plotDPTo" placeholder="">
-						</div>
-						<div id="col-md-2">	
-							<button id="btnUpdatePlot" type="submit" class="btn btn-default">Update Plot</button>
-						</div>
-					</div>
+		<div class="tron-wrapper">
+			<div class="tron">
+				<div class="spacer"></div>
+				<div class="box-row">
+					<div class="box-spacer"></div><div class="box" id="registrationPortal">
+						<h3>Sign up to receive flood alerts</h3>
+						<a class="btn btn-success btn-lg" href='registration.php' target="_blank">Sign Up</a>
+					</div><div class="box-spacer"></div><div class="box"><h3>Launch flood forecast application</h3>
+					<a class="btn btn-primary btn-lg" href="ff.html" target="_blank">Launch App</a></div><div class="box-spacer"></div>
 				</div>
-			</div>
-			<div id="tabs-3">
-				<div id="multiPlot"></div>
-			</div>
-			<div id="closePanel">
-				<button id="btnClosePanel" class="btn btn-info btn-xs">Close Panel</button>
+				<div class="spacer"></div>
 			</div>
 		</div>
-
-		<!--flood forecast gage information -->
-		<div id="forecastInfo">
-			<ul>
-				<li><a href="#fc-tabs-1">Flood Forecast Information</a></li>
-			</ul>
-			<div id="fc-tabs-1">
-				<div id="fcGageInfo">
-				</div>
-				<div id="fcGagePlot">
-				</div>
-			</div>
 		</div>
-		<!--end flood forecast gage information -->
-
-		<!--load scripts at end of page -->
-		<!--google maps, openlayers, proj4js -->
-		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false&amp;key=AIzaSyB7Ndq60bsM6G2DvKY7SGEbf7vsSa_2Eg8"></script>
-		<script src="assets/OpenLayers/OpenLayers.js"></script>
-    	<script src="assets/OpenLayers/proj4js/lib/proj4js-combined.js"></script>
-
-    	<!--jQuery, jQueryUI, bootstrap-->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-		<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-		
-		<script src="assets/js/map.js"></script>
-		<script src="assets/Highcharts/js/highcharts.js"></script>
 	</body>
 </html>
