removed exclamation point

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<div class="box-spacer"></div><div class="box" id="registrationPortal">
 						<h3>Sign up to receive flood alerts</h3>
 						<a class="btn btn-success btn-lg" href='registration.php' target="_blank">Sign Up</a>
-					</div><div class="box-spacer"></div><div class="box"><h3>Launch flood forecast application!</h3>
+					</div><div class="box-spacer"></div><div class="box"><h3>Launch flood forecast application</h3>
 					<a class="btn btn-primary btn-lg" href="ff.html" target="_blank">Launch App</a></div><div class="box-spacer"></div>
 				</div>
 				<div class="spacer"></div>
