--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<h3>Sign up to receive flood alerts</h3>
 						<a class="btn btn-success btn-lg" href='registration.php' target="_blank">Sign Up</a>
 					</div><div class="box-spacer"></div><div class="box"><h3>Launch flood forecast application</h3>
-					<a class="btn btn-primary btn-lg" href="ff.html" target="_blank">Launch App</a></div><div class="box-spacer"></div>
+					<a class="btn btn-primary btn-lg" href="ff.php" target="_blank">Launch App</a></div><div class="box-spacer"></div>
 				</div>
 				<div class="spacer"></div>
 			</div>
